# python-react-ecommerce-example

./: README.md  docker-compose.yml
backend/: .env.example  Dockerfile  openapi.json  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py
backend/app/db/: database.py  session.py
backend/app/models/: user.py
backend/app/routes/: users_router.py
backend/app/services/: user_service.py
frontend/: package-lock.json  package.json
