[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Justin Largo <justinlargo7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
pydantic-settings = "^2.5.2"
SQLAlchemy = "^2.0.35"
alembic = "^1.13.3"
psycopg2-binary = "^2.9.9"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
